# cellanova

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
cellanova/: model.py  utils.py
data/: Simu1_SeuratObj.rds  t1d_example.h5ad
tutorials/: cellanova_custom_integration.html  cellanova_custom_integration.ipynb  cellanova_integration.html  cellanova_integration.ipynb  eval_batch_removal.html  eval_batch_removal.ipynb  eval_distortion.html  eval_distortion.ipynb  eval_signal_preservation.html  eval_signal_preservation.ipynb
