[build-system]
requires = ["setuptools>=42", "wheel"] 
build-backend = "setuptools.build_meta"

[project]
name = "cellanova"
version = "0.1.0"
description = "Cell state space analysis of variance for signal recovery with batch correction "
authors = [
  { name="Jane Zhang", email="zjzhang1235@gmail.com" },
  { name="Zongming Ma"},
  { name="Nancy Zhang"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.20.3",
  "matplotlib",
  "seaborn",
  "scanpy>=1.8.1",
  "statsmodels>=0.12.2",
  "anndata>=0.7.6",
  "pandas>=1.1.0",
  "scipy>=1.7.1",
  "scikit-learn>=1.0.2",
  "harmonypy>=0.0.6"
]

[project.urls]
"Homepage" = "https://github.com/Janezjz/cellanova"

